--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,21 @@ div.right h2 {
   margin-right: 3em;
 }
 
-h1,h2,h3 {
+h1,h2,h3,h4 {
   font-weight: 300;
   text-shadow: 2px 5px 5px #000;
 }
-h3{
+h3, h4{
+  text-align: center;
   font-size: 100px;
   width: 1034px;
   margin-left: -10px;
   margin-top: -10px;
   text-shadow: 2px 5px 5px #000;
   background: rgba(0, 0, 0, 0.6);
+}
+h4{
+  color: #bbb;
 }
 .shadowed h1{
   background: rgba(0, 0, 0, 0.6);
